Bug 654916 - To/Cc Popups are uneven for first and last rows; r=bwinton

--- a/mail/themes/gnomestripe/mail/compose/messengercompose.css
+++ b/mail/themes/gnomestripe/mail/compose/messengercompose.css
@@ -293,6 +293,10 @@ toolbar[iconsize="small"] #paste-button[disabled="true"] {
   background-color: transparent;
 }
 
+#addressingWidget listboxbody {
+  margin: 1px 0;
+}
+
 #textcol-addressingWidget {
   border: 1px solid threedshadow;
   background-color: -moz-field;
